--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,8 @@ install:
 script: "./scripts/run-tests.sh --debug"
 git: 
     depth: 3    
+
+notifications:
+    email:
+        on_success: never
+        on_failure: never
